[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revisitpy"
version = "0.1.0"
dependencies = [
    "anywidget",
    "pydantic>=2.10.5",
    "pandas",
]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/revisitpy/static/*"]
exclude = ["tests", "scripts"]


[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/revisitpy/static/widget.js"]
skip-if-exists = ["src/revisitpy/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "yarn"
build_cmd = "build"
